<resources>
    <string name="app_name">Indoor Tracker</string>
    <string name="mapping">Mapping</string>
    <string name="testing">Testing</string>
    <string name="enter_password">Enter Password</string>
    <string name="hint">0000</string>
    <string name="downloadreq">Please download a floor plan</string>
    <string name="download">Download</string>
    <string name="next">Next</string>
    <string name="mark_location">Please mark your current location on the map</string>
    <string name="open_map">Open Map</string>
    <string name="start_scan">Start Scan</string>
    <string name="scanning">Scanning…</string>
    <string name="cancel">Cancel</string>
    <string name="percent_complete">X% complete</string>
    <string name="move_and_scan">Move 5m away and start next scan</string>
    <string name="next_scan">Next Scan</string>
    <string name="complete">Mapping Complete</string>
    <string name="updated">Database Updated</string>
    <string name="home">Home</string>
</resources>