<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:text="@string/percent_complete"
        android:gravity="center|bottom"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_and_scan"
        android:gravity="center|bottom"
        android:layout_marginBottom="20sp"/>

    <Button
        android:id="@+id/next_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_scan"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_gravity="center"/>

</LinearLayout>