<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:text="@string/complete"
        android:gravity="center|bottom"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updated"
        android:gravity="center"
        android:layout_marginBottom="200sp"/>

    <Button
        android:id="@+id/to_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:layout_gravity="center"/>

</LinearLayout>